--- a/deploy/helm/athena/values.yaml
+++ b/deploy/helm/athena/values.yaml
@@ -7,7 +7,7 @@ replicaCount: 1
 image:
   repository: alexismtr/athena
   pullPolicy: IfNotPresent
-  tag: "main"
+  tag: ""
 
 imagePullSecrets: []
 nameOverride: ""
