chore(workflow): rework workflow

--- a/.github/workflows/helm.yaml
+++ b/.github/workflows/helm.yaml
@@ -18,6 +18,7 @@ on:
 
 jobs:
   semantic_version:
+    if: "! contains(toJSON(github.event.commits.*.message), '[skip-ci]')"
     name: Compute next version
     runs-on: ubuntu-latest
     steps:
@@ -25,31 +26,47 @@ jobs:
       uses: actions/checkout@v2
       with:
         fetch-depth: 0
+    - name: Retrieve branch name
+      id: branch_name
+      env:
+        PR_HEAD_LABEL: ${{ github.event.pull_request.head.label }}
+      run: |
+        if [ "$GITHUB_EVENT_NAME" == "pull_request" ]; then
+          echo "branch=${PR_HEAD_LABEL#*:}" >> $GITHUB_ENV
+          echo "::set-output name=branch::${PR_HEAD_LABEL#*:}"
+          echo $branch
+        else
+          echo "branch=${GITHUB_REF#refs/heads/}" >> $GITHUB_ENV
+          echo "::set-output name=branch::${GITHUB_REF#refs/heads/}"
+          echo $branch
+        fi
     - uses: paulhatch/semantic-version@v3
       id: semver
       name: Compute SemVer
       with:
-        branch: "main"
+        branch: "${{ steps.branch_name.outputs.branch }}"
         tag_prefix: "helm-"
         major_pattern: "BREAKING CHANGES"
         minor_pattern: "feature"
         format: "${major}.${minor}.${patch}"
+        change_path: 'deploy/helm/'
     - name: Comment PR
+      if: ${{ steps.semver.outputs.changed && github.event_name == 'pull_request' }}
       uses: thollander/actions-comment-pull-request@master
       with:
         message: "### 👷🏻‍♂️ Next helm chart version will be **${{ steps.semver.outputs.version}}**\ndon't worry, Github Action will take care of all of this for you once this PR will be merged 🧘🏻‍♀️"
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     - name: Update chart version, tag and push
-      if: github.event_name != 'pull_request'
+      if: ${{ steps.semver.outputs.changed && github.event_name == 'push' }}
       run: |
-        sed 's/appVersion: .*/appVersion: ${{ steps.semver.outputs.version}}/' ./deploy/helm/athena/Chart.yaml
+        sed -i 's/version: .*/version: ${{ steps.semver.outputs.version}}/' ./deploy/helm/athena/Chart.yaml
         
         git config user.email "${{ github.actor }}@users.noreply.github.com"
         git config user.name "${{ github.actor }}"
 
         git add ./deploy/helm/athena/Chart.yaml
-        git commit -m "Bump Athena helm chart version to ${{ steps.semver.outputs.version }}"
-        git tag ${{ steps.semver.outputs.version }} -a -m "Athena helm chart version ${{ steps.semver.outputs.version }}"
+        git commit -m "chore: bump Athena helm chart version to ${{ steps.semver.outputs.version }} [skip-ci]"
+        git tag helm-${{ steps.semver.outputs.version }} -a -m "Athena helm chart version ${{ steps.semver.outputs.version }}"
 
         git push --follow-tags
       env:
