--- a/.github/labeler.yaml
+++ b/.github/labeler.yaml
@@ -5,6 +5,5 @@ azure-terraform:
 azure-arm:
 - deploy/infra-as-code/azure-arm/**/*
 source:
-- './*'
-- '!deploy/**/*'
-- '!.github/**/*'
+- 'src/**/*'
+- '!src/docs/*'
