--- a/.github/workflows/athena.yaml
+++ b/.github/workflows/athena.yaml
@@ -102,22 +102,34 @@ jobs:
       uses: actions/checkout@v2
       with:
         fetch-depth: 0
+    - name: Retrieve branch name
+      id: branch_name
+      env:
+        PR_HEAD_LABEL: ${{ github.event.pull_request.head.label }}
+      run: |
+        if [ "$GITHUB_EVENT_NAME" == "pull_request" ]; then
+          echo "::set-output name=branch::${PR_HEAD_LABEL#*:}"
+        else
+          echo "::set-output name=branch::${GITHUB_REF#refs/heads/}"
+        fi
     - uses: paulhatch/semantic-version@v3
       id: semver
       name: Compute SemVer
       with:
-        branch: "main"
+        branch: "${{ steps.branch_name.outputs.branch }}"
         tag_prefix: "v"
         major_pattern: "BREAKING CHANGES"
         minor_pattern: "feature"
         format: "${major}.${minor}.${patch}"
+        change_path: 'src/'
     - name: Comment PR
+      if: ${{ steps.semver.outputs.changed && github.event_name == 'pull_request' }}
       uses: thollander/actions-comment-pull-request@master
       with:
         message: "### 👷🏻‍♂️ Next Athena version will be **${{ steps.semver.outputs.version}}**\ndon't worry, Github Action will take care of all of this for you once this PR will be merged 🧘🏻‍♀️"
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     - name: Update Version, tag and push
-      if: github.event_name != 'pull_request'
+      if: ${{ steps.semver.outputs.changed && github.event_name == 'push' }}
       run: |
         sed -i 's/<Version>.*<\/Version>/<Version>${{ steps.semver.outputs.version }}<\/Version>/' Athena.csproj
         
@@ -125,7 +137,7 @@ jobs:
         git config user.name "${{ github.actor }}"
 
         git add Athena.csproj
-        git commit -m "Bump Athena version to ${{ steps.semver.outputs.version }}"
+        git commit -m "chore: bump Athena version to ${{ steps.semver.outputs.version }}"
         git tag v${{ steps.semver.outputs.version }} -a -m "Athena version ${{ steps.semver.outputs.version }}"
 
         git push --follow-tags
