--- a/src/Athena.csproj
+++ b/src/Athena.csproj
@@ -7,8 +7,8 @@
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     <DockerfileContext>.</DockerfileContext>
     <Authors>AlexisMtr</Authors>
-    <Description>Backend API Component for Posedon project</Description>
-    <Version>1.0.0</Version>
+    <Description>Backend API Component for Poseidon project</Description>
+    <Version>0.0.0</Version>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="10.0.0" />
