chore(labeler): fix label rules

--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -5,9 +5,10 @@ azure-terraform:
 azure-arm:
 - deploy/infra-as-code/azure-arm/**/*
 source:
-- 'src/**/*'
-- '!src/docs/*'
+- src/**/*
+docs:
+- src/docs/**/*
 ci-workflow:
-- '.github/workflows'
+- '.github/workflows/**/*'
 CODEOWNERS:
 - '.github/CODEOWNERS'
