chore(workflow): fix athena git tag step

--- a/.github/workflows/athena.yaml
+++ b/.github/workflows/athena.yaml
@@ -99,6 +99,7 @@ jobs:
     if: "! contains(toJSON(github.event.commits.*.message), '[skip-versionning]')"
     name: Compute next version
     runs-on: ubuntu-latest
+    needs: build
     steps:
     - name: Checkout
       uses: actions/checkout@v2
@@ -138,7 +139,7 @@ jobs:
         git config user.email "${{ github.actor }}@users.noreply.github.com"
         git config user.name "${{ github.actor }}"
 
-        git add Athena.csproj
+        git add .src/Athena.csproj
         git commit -m "chore: bump Athena version to ${{ steps.semver.outputs.version }} [skip-versionning]"
         git tag v${{ steps.semver.outputs.version }} -a -m "Athena version ${{ steps.semver.outputs.version }}"
 
