--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -1,5 +1,4 @@
 #See https://aka.ms/containerfastmode to understand how Visual Studio uses this Dockerfile to build your images for faster debugging.
-
 FROM mcr.microsoft.com/azure-functions/dotnet:3.0 as base
 WORKDIR /home/site/wwwroot
 EXPOSE 80
@@ -16,6 +15,7 @@ FROM build AS publish
 RUN dotnet publish "Athena.csproj" -c Release -o /app/publish
 
 FROM base AS final
+LABEL maintainer="AlexisMtr"
 WORKDIR /home/site/wwwroot
 COPY --from=publish /app/publish .
 ENV AzureWebJobsScriptRoot=/home/site/wwwroot \
