--- a/.github/workflows/athena.yaml
+++ b/.github/workflows/athena.yaml
@@ -1,4 +1,4 @@
-name: Athena Actions
+name: Athena Main Actions
 
 on:
   workflow_dispatch:
@@ -7,29 +7,37 @@ on:
     paths:
     - 'src/**'
     - '!src/docs/*'
+    - '!src/**/*.md'
     branches:
     - main
   push:
     paths:
     - 'src/**'
     - '!src/docs/*'
+    - '!src/**/*.md'
     branches:
     - main
+    tags:
+    - 'v*.*.*'
 
 jobs:
   code_quality:
+    if: ${{ !github.ref.startWith('refs/tags/') && !contains(toJSON(github.event.commits.*.message), '[skip ci]') }}
     name: Code Quality
     runs-on: windows-latest
     steps:
     - uses: actions/checkout@v2
       with:
+        token: ${{ secrets.PAT_GITHUB }}
         fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
+
     - name: Cache SonarCloud packages
       uses: actions/cache@v1
       with:
         path: ~\sonar\cache
         key: ${{ runner.os }}-sonar
         restore-keys: ${{ runner.os }}-sonar
+
     - name: Cache SonarCloud scanner
       id: cache-sonar-scanner
       uses: actions/cache@v1
@@ -37,12 +45,14 @@ jobs:
         path: .\.sonar\scanner
         key: ${{ runner.os }}-sonar-scanner
         restore-keys: ${{ runner.os }}-sonar-scanner
+
     - name: Install SonarCloud scanner
       if: steps.cache-sonar-scanner.outputs.cache-hit != 'true'
       shell: powershell
       run: |
         New-Item -Path .\.sonar\scanner -ItemType Directory
         dotnet tool update dotnet-sonarscanner --tool-path .\.sonar\scanner
+
     - name: Build and analyze
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
@@ -54,24 +64,30 @@ jobs:
         .\.sonar\scanner\dotnet-sonarscanner end /d:sonar.login="${{ secrets.SONAR_TOKEN }}"
 
   build:
-    needs: code_quality
+    if: "!contains(toJSON(github.event.commits.*.message), '[skip ci]')"
     name: Build .NET App
     runs-on: ubuntu-latest
     steps:
     - name: Check out the repo
       uses: actions/checkout@v2
+      with:
+        token: ${{ secrets.PAT_GITHUB }}
+        fetch-depth: 0 
+
     - name: Setup .NETCore 3.1
       uses: actions/setup-dotnet@v1
       with:
         dotnet-version: '3.1.x' # SDK Version to use; x will use the latest version of the 3.1 channel
+
     - name: Build Artifact
       run: |
         configuration=Release
-        if [ ${{ github.action }} == 'pull_request'];
+        if [[ ${{ github.action }} == 'pull_request' ]];
         then
           configuration=Debug
         fi
         dotnet publish src/Athena.csproj -c $configuration -o ./app/publish
+
     - name: Publish Build Artifact
       uses: actions/upload-artifact@v2
       with:
@@ -79,12 +95,16 @@ jobs:
         path: ./app/publish
 
   docker_push:
-    needs: code_quality
+    if: "!contains(toJSON(github.event.commits.*.message), '[skip ci]')"
     name: Push Docker image to Docker Hub
     runs-on: ubuntu-latest
     steps:
     - name: Check out the repo
       uses: actions/checkout@v2
+      with:
+        token: ${{ secrets.PAT_GITHUB }}
+        fetch-depth: 0 
+
     - name: Push to Docker Hub
       uses: docker/build-push-action@v1
       with:
@@ -96,15 +116,16 @@ jobs:
         add_git_labels: true
 
   semantic_version:
-    if: "! contains(toJSON(github.event.commits.*.message), '[skip-versionning]')"
+    if: ${{ !github.ref.startWith('refs/tags/') && !contains(toJSON(github.event.commits.*.message), '[skip ci]') }}
     name: Compute next version
     runs-on: ubuntu-latest
-    needs: build
     steps:
     - name: Checkout
       uses: actions/checkout@v2
       with:
+        token: ${{ secrets.PAT_GITHUB }}
         fetch-depth: 0
+
     - name: Retrieve branch name
       id: branch_name
       env:
@@ -115,23 +136,26 @@ jobs:
         else
           echo "::set-output name=branch::${GITHUB_REF#refs/heads/}"
         fi
+
     - uses: paulhatch/semantic-version@v3
       id: semver
-      name: Compute SemVer
+      name: Compute Semantic Version
       with:
         branch: "${{ steps.branch_name.outputs.branch }}"
         tag_prefix: "v"
         major_pattern: "BREAKING CHANGES"
-        minor_pattern: "feature"
+        minor_pattern: "feat"
         format: "${major}.${minor}.${patch}"
         change_path: 'src/'
+
     - name: Comment PR
       if: ${{ steps.semver.outputs.changed && github.event_name == 'pull_request' }}
       uses: thollander/actions-comment-pull-request@master
       with:
         message: "### 👷🏻‍♂️ Next Athena version will be **${{ steps.semver.outputs.version}}**\ndon't worry, Github Action will take care of all of this for you once this PR will be merged 🧘🏻‍♀️"
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-    - name: Update Version, tag and push
+        
+    - name: Update version, tag and push
       if: ${{ steps.semver.outputs.changed && github.event_name == 'push' }}
       run: |
         sed -i 's/<Version>.*<\/Version>/<Version>${{ steps.semver.outputs.version }}<\/Version>/' ./src/Athena.csproj
@@ -140,9 +164,9 @@ jobs:
         git config user.name "${{ github.actor }}"
 
         git add ./src/Athena.csproj
-        git commit -m "chore: bump Athena version to ${{ steps.semver.outputs.version }} [skip-versionning]"
+        git commit -m "chore(athena): bump Athena version to ${{ steps.semver.outputs.version }} [skip ci]"
         git tag v${{ steps.semver.outputs.version }} -a -m "Athena version ${{ steps.semver.outputs.version }}"
 
         git push --follow-tags
       env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        GITHUB_TOKEN: ${{ secrets.PAT_GITHUB }}
