--- a/.github/workflows/helm-athena.yaml
+++ b/.github/workflows/helm-athena.yaml
@@ -12,31 +12,20 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@v2
-      with:
-        fetch-depth: 0
-    - uses: paulhatch/semantic-version@v3
-      id: semver
-      name: Compute SemVer
-      with:
-        branch: "main"
-        tag_prefix: "helm-"
-        major_pattern: "BREAKING CHANGES"
-        minor_pattern: "feature"
-        format: "${major}.${minor}.${patch}"
+
     - name: Update chart appversion, tag and push
-      if: ${{ steps.semver.outputs.changed }}
       run: |
         athena_tag=$(echo ${{ github.ref }} | awk -F/ '{print $NF}')
         sed -i 's/appVersion: .*/appVersion: $athena_tag/' ./deploy/helm/athena/Chart.yaml
-        sed -i 's/version: .*/version: ${{ steps.semver.outputs.version}}/' ./deploy/helm/athena/Chart.yaml
+        grep -Po "^version:\s?(\d+\.\d+\.\d+)$" deploy/helm/athena/Chart.yaml | sed -E 's/version:\s?//' | awk -F. '{ printf "%s.%s.0\n", $1, $2+1 }' | xargs -I@ sed -i 's/^version: .*/version: @/' deploy/helm/athena/Chart.yaml
         
         git config user.email "${{ github.actor }}@users.noreply.github.com"
         git config user.name "${{ github.actor }}"
 
         git add ./deploy/helm/athena/Chart.yaml
-        git commit -m "featreu(helm): bump Athena helm appVersion to $athena_tag [skip-ci]"
+        git commit -m "feat(helm): bump Athena helm appVersion to $athena_tag [skip-versionning]"
         git tag helm-${{ steps.semver.outputs.version }} -a -m "Athena helm chart version ${{ steps.semver.outputs.version }}"
 
         git push --follow-tags
       env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        GITHUB_TOKEN: ${{ secrets.PAT_GITHUB }}
