--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -1,9 +1,9 @@
-name: Main
+name: Release
 
 on:
   push:
     branches:
-    - master
+    - main
 
 jobs:
   release:
@@ -36,6 +36,11 @@ jobs:
           @semantic-release/github \
           @semantic-release/git \
           @semantic-release/exec
+
+    - name: Setup .NETCore 3.1
+      uses: actions/setup-dotnet@v1
+      with:
+        dotnet-version: '3.1.x'
 
     - name: 'release'
       id: release
