--- a/helm/athena/templates/secret.yaml
+++ b/helm/athena/templates/secret.yaml
@@ -10,6 +10,6 @@ metadata:
     app.kubernetes.io/managed-by: {{ .Release.Service }}
 type: Secret
 data:
-  {{- range $index, $value := .Values.secretsEnv }}
+  {{- range $index, $value := .Values.environmentSecrets }}
     {{$index}}: "{{ $value }}" 
   {{- end}}
