--- a/helm/athena/values.yaml
+++ b/helm/athena/values.yaml
@@ -30,16 +30,14 @@ service:
 
 ingress:
   enabled: false
-  annotations:
-    kubernetes.io/ingress.class: nginx
-    nginx.ingress.kubernetes.io/rewrite-target: /
+  annotations: {}
   hosts: []
   tls: []
 
 resources: {}
 
 autoscaling:
-  enabled: true
+  enabled: false
   minReplicas: 1
   maxReplicas: 100
   targetCPUUtilizationPercentage: 80
@@ -57,8 +55,8 @@ environments:
   EventPublish: new_computed_telemetries
   EventSubscribe: new_telemetries
 
-secretsEnv:
-  azure_storage: "" # must be secret 
-  EventSubscribeConnectionString: "" # must be secret
-  EventPublishConnectionString: "" # must be secret
-  DbConnectionString: "" # must be secret
+environmentSecrets:
+  AZ_STORAGE: "" # must be secret 
+  EVT_SUB_CONNECTION_STRING: "" # must be secret
+  EVT_PUB_CONNECTION_STRING: "" # must be secret
+  DB_CONNECTION_STRING: "" # must be secret
