--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -37,6 +37,13 @@ jobs:
           @semantic-release/git \
           @semantic-release/exec
 
+        curl -LO https://github.com/norwoodj/helm-docs/releases/download/v1.5.0/helm-docs_1.5.0_Linux_x86_64.tar.gz
+        tar -xzf helm-docs_1.5.0_Linux_x86_64.tar.gz
+        sudo mv helm-docs /usr/local/bin
+
+        # check helm-docs is installed
+        helm-docs --version && exit 0 || exit 1
+
     - name: Setup .NETCore 3.1
       uses: actions/setup-dotnet@v1
       with:
