--- a/helm/athena/templates/secret.yaml
+++ b/helm/athena/templates/secret.yaml
@@ -10,6 +10,7 @@ metadata:
     app.kubernetes.io/managed-by: {{ .Release.Service }}
 type: Secret
 data:
-  {{- range $index, $value := .Values.environmentSecrets }}
-    {{$index}}: "{{ $value }}" 
-  {{- end}}
+  AZ_STORAGE: {{ .Values.environmentsSecret.connectionStrings.azStorage }}
+  EVT_SUB_CONNECTION_STRING: {{ .Values.environmentsSecret.connectionStrings.publishBroker }}
+  EVT_PUB_CONNECTION_STRING: {{ .Values.environmentsSecret.connectionStrings.subscribeBroker }}
+  DB_CONNECTION_STRING: {{ .Values.environmentsSecret.connectionStrings.sqlServer }}
