--- a/helm/athena/values.yaml
+++ b/helm/athena/values.yaml
@@ -30,16 +30,14 @@ service:
 
 ingress:
   enabled: false
-  annotations:
-    kubernetes.io/ingress.class: nginx
-    nginx.ingress.kubernetes.io/rewrite-target: /
+  annotations: {}
   hosts: []
   tls: []
 
 resources: {}
 
 autoscaling:
-  enabled: true
+  enabled: false
   minReplicas: 1
   maxReplicas: 100
   targetCPUUtilizationPercentage: 80
@@ -51,14 +49,15 @@ tolerations: []
 affinity: {}
 
 environments:
-  FUNCTIONS_WORKER_RUNTIME: dotnet
-  FUNCTIONS_EXTENSION_VERSION: ~3
-  AZURE_FUNCTIONS_ENVIRONMENT: Production
-  EventPublish: new_computed_telemetries
-  EventSubscribe: new_telemetries
+  faRuntime: dotnet
+  faExtensionVersion: ~3
+  environment: Development
+  eventPublishTopic:
+  eventSubcribeTopic:
 
-secretsEnv:
-  azure_storage: "" # must be secret 
-  EventSubscribeConnectionString: "" # must be secret
-  EventPublishConnectionString: "" # must be secret
-  DbConnectionString: "" # must be secret
+environmentsSecret:
+  connectionStrings:
+    azStorage:
+    publishBroker:
+    subscribeBroker:
+    sqlServer:
