--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   code_quality:
-    if: ${{ !github.ref.startWith('refs/tags/') && !contains(toJSON(github.event.commits.*.message), '[skip ci]') }}
+    if: "!contains(toJSON(github.event.commits.*.message), '[skip ci]')"
     name: Code Quality
     runs-on: windows-latest
     steps:
