feat(env): allow existing secret to fill env variables

--- a/helm/athena/values.yaml
+++ b/helm/athena/values.yaml
@@ -55,6 +55,8 @@ environments:
   eventPublishTopic:
   eventSubcribeTopic:
 
+# -- use existing secret to set environment secret variable
+existingEnvSecret:
 environmentsSecret:
   connectionStrings:
     azStorage:
