--- a/helm/athena/templates/deployment.yaml
+++ b/helm/athena/templates/deployment.yaml
@@ -44,27 +44,27 @@ spec:
         - name: AzureWebJobsStorage
           valueFrom:
             secretKeyRef:
-              name: {{ printf "%s-%s" (include "athena.fullname" .) "secret-env" }}
+              name: {{ default (printf "%s-%s" (include "athena.fullname" .) "secret-env") .Values.existingEnvSecret }}
               key: AZ_STORAGE
         - name: AzureWebJobsDashboard
           valueFrom:
             secretKeyRef:
-              name: {{ printf "%s-%s" (include "athena.fullname" .) "secret-env" }}
+              name: {{ default (printf "%s-%s" (include "athena.fullname" .) "secret-env") .Values.existingEnvSecret }}
               key: AZ_STORAGE
         - name: EventSubscribeConnectionString
           valueFrom:
             secretKeyRef:
-              name: {{ printf "%s-%s" (include "athena.fullname" .) "secret-env" }}
+              name: {{ default (printf "%s-%s" (include "athena.fullname" .) "secret-env") .Values.existingEnvSecret }}
               key: EVT_SUB_CONNECTION_STRING
         - name: EventPublishConnectionString
           valueFrom:
             secretKeyRef:
-              name: {{ printf "%s-%s" (include "athena.fullname" .) "secret-env" }}
+              name: {{ default (printf "%s-%s" (include "athena.fullname" .) "secret-env") .Values.existingEnvSecret }}
               key: EVT_PUB_CONNECTION_STRING
         - name: ConnectionStrings__DefaultConnection
           valueFrom:
             secretKeyRef:
-              name: {{ printf "%s-%s" (include "athena.fullname" .) "secret-env" }}
+              name: {{ default (printf "%s-%s" (include "athena.fullname" .) "secret-env") .Values.existingEnvSecret }}
               key: DB_CONNECTION_STRING
         resources:
           {{- toYaml .Values.resources | nindent 10 }}
