--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -11,6 +11,10 @@ jobs:
     name: Code Quality
     runs-on: windows-latest
     steps:
+    - name: Set up JDK 11
+      uses: actions/setup-java@v1
+      with:
+        java-version: 1.11
     - uses: actions/checkout@v2
       with:
         token: ${{ secrets.PAT_GITHUB }}
