--- a/helm/athena/templates/secret.yaml
+++ b/helm/athena/templates/secret.yaml
@@ -8,9 +8,9 @@ metadata:
     helm.sh/chart: {{ include "athena.chart" . }}
     app.kubernetes.io/instance: {{ .Release.Name }}
     app.kubernetes.io/managed-by: {{ .Release.Service }}
-type: Secret
-data:
-  AZ_STORAGE: {{ .Values.environmentsSecret.connectionStrings.azStorage }}
-  EVT_SUB_CONNECTION_STRING: {{ .Values.environmentsSecret.connectionStrings.publishBroker }}
-  EVT_PUB_CONNECTION_STRING: {{ .Values.environmentsSecret.connectionStrings.subscribeBroker }}
-  DB_CONNECTION_STRING: {{ .Values.environmentsSecret.connectionStrings.sqlServer }}
+type: Opaque
+stringData:
+  AZ_STORAGE: {{ .Values.environmentsSecret.connectionStrings.azStorage | quote }}
+  EVT_SUB_CONNECTION_STRING: {{ .Values.environmentsSecret.connectionStrings.publishBroker | quote }}
+  EVT_PUB_CONNECTION_STRING: {{ .Values.environmentsSecret.connectionStrings.subscribeBroker | quote }}
+  DB_CONNECTION_STRING: {{ .Values.environmentsSecret.connectionStrings.sqlServer | quote }}
