fix(secret): generate secret only if existingEnvSecret is not defined

--- a/helm/athena/templates/secret.yaml
+++ b/helm/athena/templates/secret.yaml
@@ -1,3 +1,4 @@
+{{- if empty .Values.existingEnvSecret -}}
 apiVersion: v1
 kind: Secret
 metadata:
@@ -14,3 +15,4 @@ stringData:
   EVT_SUB_CONNECTION_STRING: {{ .Values.environmentsSecret.connectionStrings.publishBroker | quote }}
   EVT_PUB_CONNECTION_STRING: {{ .Values.environmentsSecret.connectionStrings.subscribeBroker | quote }}
   DB_CONNECTION_STRING: {{ .Values.environmentsSecret.connectionStrings.sqlServer | quote }}
+{{- end -}}
