--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -1,9 +1,9 @@
 #See https://aka.ms/containerfastmode to understand how Visual Studio uses this Dockerfile to build your images for faster debugging.
-FROM mcr.microsoft.com/azure-functions/dotnet:3.0 as base
+FROM mcr.microsoft.com/azure-functions/dotnet:4.1.3 as base
 WORKDIR /home/site/wwwroot
 EXPOSE 80
 
-FROM mcr.microsoft.com/dotnet/core/sdk:3.1 AS build
+FROM mcr.microsoft.com/dotnet/sdk:6.0 AS build
 WORKDIR /src
 COPY ["Athena.csproj", ""]
 RUN dotnet restore "./Athena.csproj"
