--- a/helm/athena/templates/secret.yaml
+++ b/helm/athena/templates/secret.yaml
@@ -10,9 +10,9 @@ metadata:
     app.kubernetes.io/instance: {{ .Release.Name }}
     app.kubernetes.io/managed-by: {{ .Release.Service }}
 type: Opaque
-stringData:
-  AZ_STORAGE: {{ .Values.environmentsSecret.connectionStrings.azStorage | quote }}
-  EVT_SUB_CONNECTION_STRING: {{ .Values.environmentsSecret.connectionStrings.publishBroker | quote }}
-  EVT_PUB_CONNECTION_STRING: {{ .Values.environmentsSecret.connectionStrings.subscribeBroker | quote }}
-  DB_CONNECTION_STRING: {{ .Values.environmentsSecret.connectionStrings.sqlServer | quote }}
+data:
+  AZ_STORAGE: {{ default "" .Values.configuration.azFunction.storageAccount.connectionString | b64enc | quote }}
+  DB_CONNECTION_STRING: {{ default "" .Values.configuration.sqlServer.dbConnectionString | b64enc | quote }}
+  EVT_SUB_CONNECTION_STRING: {{ default "" .Values.configuration.pubSub.brokers.subscribe.connectionString | b64enc | quote }}
+  EVT_PUB_CONNECTION_STRING: {{ default "" .Values.configuration.pubSub.brokers.publish.connectionString | b64enc | quote }}
 {{- end -}}
