fix(helm): fix secret reference

--- a/helm/athena/templates/secret.yaml
+++ b/helm/athena/templates/secret.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: {{ printf "%s-%s" (include "athena.name" .) "secret-env" }}
+  name: {{ printf "%s-%s" (include "athena.fullname" .) "secret-env" }}
   namespace: {{ .Release.Namespace }}
   labels:
     app.kubernetes.io/name: {{ include "athena.name" . }}
